--- a/app/styles.css
+++ b/app/styles.css
@@ -27,3 +27,13 @@
     width: 100%;
     font-weight: bold;
 }
+.search-button {
+    background-color: rgb(243, 96, 96);
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
