--- a/app/styles.css
+++ b/app/styles.css
@@ -1,3 +1,5 @@
+body {
+}
 .app{
     max-width: calc(768px + 16px * 2);
     margin: 0 auto;
@@ -6,8 +8,8 @@
     padding: 0 16px;
     flex-direction: column;
 }
-.footer {
-    position: fixed;
+footer {
+    height: auto;
     left: 0;
     bottom: 0;
     width: 100%;
@@ -28,6 +30,8 @@
     margin: 8px 0;
     display: inline-block;
     border-bottom: 1px solid rgb(243, 96, 96);
+    background-color: rgb(68, 67, 67);
+    color: white;
     border-radius: 0px;
     box-sizing: border-box;
 }
@@ -36,7 +40,6 @@
     font-weight: bold;
 }
 .search-button {
-    background-color: rgb(243, 96, 96);
     border: none;
     color: white;
     padding: 15px 32px;
@@ -44,4 +47,30 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
+}
+.mode-button {
+    border: none;
+    background-color: rgb(70, 69, 69);
+    color: white;
+    padding: 5px 32px;
+    margin: 10px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+}
+.button-background-color {
+    background-color: rgb(243, 96, 96);
+}
+.inline-block {
+    display: inline-block;
+}
+.float-right
+{
+    float: right;
+}
+.film-thumbnail {
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    width: 300px;
 }
